Performance cleanup: Replace string .trim().length() == 0 checks with isBlank()
Per Codacy, it's more efficient to use an 'isBlank' check:
> String.trim().length() == 0 (or String.trim().isEmpty() for the same reason) is an inefficient way to check if a String is really blank, as it creates a new String object just to check its size.